// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DriftFilterValue should render correctly 1`] = `
<Fragment>
  <ToolbarFilter
    categoryName="Fact name"
    chips={Array []}
    showToolbarItem={true}
  >
    <SearchBar
      activeFactFilters={Array []}
      factFilter=""
      filterByFact={[MockFunction]}
      handleFactFilter={[MockFunction]}
      setHistory={[MockFunction]}
    />
  </ToolbarFilter>
  <ToolbarFilter
    categoryName="State"
    chips={
      Array [
        "Same",
        "Different",
        "Incomplete data",
      ]
    }
    showToolbarItem={true}
  />
</Fragment>
`;

exports[`DriftFilterValue should render with fact filter chips 1`] = `
<Fragment>
  <ToolbarFilter
    categoryName="Fact name"
    chips={
      Array [
        "cat",
        "mouse",
        "dog",
      ]
    }
    showToolbarItem={true}
  >
    <SearchBar
      activeFactFilters={
        Array [
          "cat",
          "mouse",
        ]
      }
      factFilter="dog"
      filterByFact={[MockFunction]}
      handleFactFilter={[MockFunction]}
      setHistory={[MockFunction]}
    />
  </ToolbarFilter>
  <ToolbarFilter
    categoryName="State"
    chips={
      Array [
        "Same",
        "Different",
        "Incomplete data",
      ]
    }
    showToolbarItem={true}
  />
</Fragment>
`;

exports[`DriftFilterValue should render with state filter deselected 1`] = `
<Fragment>
  <ToolbarFilter
    categoryName="Fact name"
    chips={Array []}
    showToolbarItem={true}
  />
  <ToolbarFilter
    categoryName="State"
    chips={
      Array [
        "Different",
        "Incomplete data",
      ]
    }
    showToolbarItem={true}
  >
    <Connect(FilterDropDown)
      setHistory={[MockFunction]}
    />
  </ToolbarFilter>
</Fragment>
`;
